fix: permanent scrollbar on HTML main block

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -51,7 +51,7 @@ $font-family: 'Poppins';
 // Global/Generic styles
 html {
   font-family: Poppins, sans-serif;
-  overflow-y: hidden;
+  overflow-y: hidden !important;
 }
 
 body::after {
